# EventChains-BuildSystem

./: CMakeLists.txt  README.md  cache_metadata.c  cache_metadata.h  compile_events.c  compile_events.h  dependency_demo.c  dependency_resolver.c  dependency_resolver.h  ecbuild.c  eventchains_build.c  eventchains_build.h  eventchains_middleware.c  test_dependency_resolver.c  test_eventchains_integration.c  test_persistent_cache.c
include/: eventchains.c
